<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/violet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/text_create"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="Hello"
                android:textColor="@color/white"
                android:textSize="35sp" />


            <TextView
                android:id="@+id/loginPageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/welcome_to"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </LinearLayout>


        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="-10dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/logobg"/>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="30dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:layout_marginTop="30dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/email"
                android:textColorHint="@color/grey"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:background="@drawable/custom_input"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/custom_email_icon"
                android:layout_height="50dp">
            </EditText>
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:inputType="textPassword"
                android:background="@drawable/custom_input"
                android:drawablePadding="12dp"
                android:layout_marginBottom="5dp"
                android:drawableStart="@drawable/custom_lock_icon"
                android:layout_height="50dp">

            </EditText>
            <TextView
                android:id="@+id/forgotPassword"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_gravity="end"
                android:textSize="14sp"
                android:textColor="@color/black"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/login_btn"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="40dp"
                    android:text="@string/login"
                    android:clickable="true"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/violet"
                    android:layout_marginHorizontal="20dp"
                    android:focusable="true" />

            </RelativeLayout>
            <TextView
                android:id="@+id/openSignUp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_sign_up"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:textColor="@color/black"
                />


            <TextView
                android:id="@+id/adminLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/admin_login"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>